# aiebaremetal

./: Makefile  README.md
example/: Makefile  README.md
example/example_GMIO/add_32gmio/: Makefile  README.md  build.sh  runsim.sh
example/example_GMIO/adf_mm_noPL_gmio/: README.md  runsim.sh
example/example_GMIO/dct/: runsim.sh
example/example_GMIO/mm_2graphs_gmio/: README.md  gdbaiesimu.sh  runsim.sh
example/example_GMIO/mm_noPL_2rtp/: README.md  envaie20231.sh
example/example_GMIO/mm_noPL_gmio/: README.md  runsim.sh
example/example_GMIO/mm_noPL_gmio_reconf/: runsim.sh
example/example_GMIO/mm_noPL_rtp/: Makefile  README.md
example/example_GMIO/mm_noPL_rtp_2run/: README.md
example/example_GMIO/mm_noPL_waitdone/: README.md  build.sh
example/example_external_buffer/: Makefile  build.sh  build2023.1.sh  envaie2pst50.sh  runsim.sh  vek280_boot_image.bif
example/example_external_buffer/src/: convolution1.h  graph.cpp  graph.h
example/example_kernelplio/: Makefile  README.md  build.sh  buildall.sh  runsim.sh
example/example_kernelplio/pl_kernels/: build.sh  env2024.sh  system.cfg
example/example_kernelplio/script/: builda72.sh  builda72adf.sh  vck190_boot_image.bif  vek280_boot_image.bif
example/example_kernelplio/src/: common.h  graph.cpp  graph.h  square.cc  square.h
example/example_lwip_echo/: Makefile
example/example_multi_partition/: README.md  build.sh  graph.cpp  vck190_boot_image.bif
example/example_multi_partition/test_partition1/: aieldpath.sh  build.sh  envaie2pst50.sh
example/example_multi_partition/test_partition2/: Makefile  build.sh  build_adf.sh
example/example_oob/: Makefile  buid20231.sh  build.sh  runsim.sh  runsim20231.sh
example/example_oob/script/: boot_image.bif.bak  (+3 more)
example/testaie/: Readme.md  xaie_test_all.h  xaie_test_kernel_load.c  xaie_test_memalloc.c  xaie_test_shim.c  xaie_test_sim.c
example/testapurpu/: Makefile  README  apu.c  common.c  common.h  rpu.c
example/testkernel/: build.sh
example/testkernel_rtp/: runsim.sh
example/testkernel_rtp_sync/: README.md  envaie2pst50.sh  runsim.sh
example/testuc/: xaie_load_ucelf.c  xaie_test.h
example/testut/: main_rts.c  sim.h  test.c  testsim.c  txn.h
include/: abr_baremetal_api.h  abr_configure.h  aiebaremetal.h  common.h  event.h  externalbufferapiimpl.h  gmioapiimpl.h  hw_config.h  main_rts.h  xaiemem.h
include/common_layer/: abr_aie_control_api.h  abr_api_config.h  abr_api_message.h  abr_runtime_api.h
include/log/: build.sh  kcommon.h  klog.c  klog.h  klogr.h
script/: adfrcompile.sh  aie_config_parse.py  aiemetacpp.py  bspsetup.sh  build_liblwip.sh  build_liblwip.tcl  builda72.sh  builda72adf.sh  compile.sh  compile_kernel.sh  env.sh  envaie2pst50.sh  generate_json_c.sh  runsim.sh  settings.sh  vck190_boot_image.bif  vck190_rpu_boot_image.bif  vek280_rpu_boot_image.bif
src/: abr_aiebaremetal.cc  abr_configure.cc
src/common_layer/: abr_api_message.cpp  abr_runtime_api.cpp
src/tool/adfconvert/: CMakeLists.txt  README.md  convert.sh  run.sh  setup.sh
src/tool/adfconvert/example/: graph.cpp  graph.h  graph_new.cpp
src/tool/adfconvert/src/: adfconvert.cpp
tutorial/deploydemo/: README.md  build_baremetal.sh  buildelf.sh  buildmain.sh  buildmeta.sh  depsetup.sh  graph.cpp
(+109 files in other folders)
